--- a/style.css
+++ b/style.css
@@ -37,17 +37,19 @@ body {
     overflow: auto;
 }
 
-input:not([type=submit]):not([type=file]) {
-    border: 5px solid white;
+input {
     -webkit-box-shadow: inset 0 0 8px rgba(0,0,0,0.1), 0 0 16px rgba(0,0,0,0.1);
     box-shadow: inset 0 0 8px rgba(0,0,0,0.1), 0 0 16px rgba(0,0,0,0.1);
     height: 80px;
     width: 80%;
     background: rgba(255,255,255,0.5);
     margin: 0 0 10px 0;
+    margin-top: 20px;
     padding-left: 20px;
     font-size: 30px;
+    border-radius: 25px;
 }
+
 
 .submitter {
     background-image: url("images/search.png");
